--- a/beer.html
+++ b/beer.html
@@ -3,26 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Trøjborg Bryggeri - Din kilde til kvalitetsalkoholfri øl og mocktails. Oplev vores spændende smagsoplevelser og sunde alternativer til traditionelle drikkevarer. Brygget med passion og dedikation for en sund livsstil.">
     <link rel="icon" href="media/favicon.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Trøjborg Bryggeri</title>
     <!-- External css sheets -->
      <!--=============== Font awesome/REMIXICONS ===============-->
      <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- CSS Style sheets -->
+    <!-- local Style sheets -->
 
     <!-- Navbar css link -->
     <link rel="stylesheet" href="css/navbar.css">
+    <!-- Generelle css regler for hele hjemmesiden. -->
     <link rel="stylesheet" href="css/main.css">
+    <!-- Alt grid css er hold til det her sheet -->
     <link rel="stylesheet" href="css/grid.css">
 </head>
 <body>
-      <!------------------- Navigations bar ------------------->
+      <!-- Navigations bar -->
       <header class="header">
             <nav class="nav container">
                <div class="nav__data">
-                  <a href="#" class="nav__logo">
+                  <a href="index.html" class="nav__logo">
                      <img src="media/logo.png" alt="Trøjborg logo">
                   </a>
                   
@@ -84,6 +87,8 @@
       </header>
       <h1 class="products-header">Vores Alkoholfri øl</h1>
 
+      <!-- Øl produkter, som så bare er copy paste 6 gange for antal produkter. -->
+
       <section class="product-container">
          <div class="products">
             <div class="product-name">
@@ -110,8 +115,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.png" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.png" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -122,7 +127,7 @@
                <h2>Trøjborg Ipa Dåse</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/beer/ipa-can.webp" alt="Et billede af vores ipa øl">
+               <img src="media/shop/beer/ipa-can.webp" alt="Et billede af vores ipa øl dåse">
             </div>
             <div class="product-desc">
                <p>Trøjborg Bryggeris alkoholfri IPA er en harmonisk<br>
@@ -142,8 +147,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.png" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.png" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -154,7 +159,7 @@
                <h2>Trøjborg Lager</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/beer/lager.webp" alt="Et billede af vores ipa øl">
+               <img src="media/shop/beer/lager.webp" alt="Et billede af vores lager øl">
             </div>
             <div class="product-desc">
                <p>Trøjborg Lager er vores hyldest til den<br>
@@ -172,8 +177,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.png" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.png" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -184,7 +189,7 @@
                <h2>Trøjborg Lager Dåse</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/beer/lager-can.webp" alt="Et billede af vores ipa øl">
+               <img src="media/shop/beer/lager-can.webp" alt="Et billede af vores lager øl dåse">
             </div>
             <div class="product-desc">
                <p>Trøjborg Lager er vores hyldest til den<br>
@@ -202,8 +207,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.png" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.png" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -214,7 +219,7 @@
                <h2>Trøjborg Pilsner</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/beer/pilsner.webp" alt="Et billede af vores ipa øl">
+               <img src="media/shop/beer/pilsner.webp" alt="Et billede af vores pilsner øl">
             </div>
             <div class="product-desc">
                <p>Vores alkoholfri pilsner er en ægte klassiker med friskhed og let bitterhed i hver slurk. 
@@ -231,8 +236,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.png" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.png" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -243,7 +248,7 @@
                <h2>Trøjborg Pilsner Dåse</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/beer/pilsner-can.webp" alt="Et billede af vores ipa øl">
+               <img src="media/shop/beer/pilsner-can.webp" alt="Et billede af vores pilsner øl dåse">
             </div>
             <div class="product-desc">
                <p>Vores alkoholfri pilsner er en ægte klassiker med friskhed og let bitterhed i hver slurk. 
@@ -260,30 +265,30 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.png" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.png" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
 
-      <!---------------------- Footer ---------------------->
+      <!-- Footer -->
       <footer class="footer">
          <div class="social">
-               <a href="https://www.facebook.com/sharksaarhus/?locale=da_DK" target="”_blank”" >
+               <a href="#" target="”_blank”" >
                   <i class="fab fa-facebook"></i>
                </a>
-               <a href="https://www.instagram.com/sharkspoolhallogdiner/" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fab fa-instagram"></i>
                </a>
-               <a href="https://www.google.com/maps/place/Sharks/@56.1555213,10.2036504,17z/data=!3m1!4b1!4m6!3m5!1s0x464c3f93ddfeacb3:0xd805db22a7d13f2d!8m2!3d56.1555213!4d10.2062253!16s%2Fg%2F11b8072jw7?entry=ttu" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fa-solid fa-location-dot"></i>
                </a>
-               <a href="https://www.findsmiley.dk/48948" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fa-regular fa-face-smile"></i>
                </a>
          </div>
          <p class="copyright">Terms of use | Privacy Policy</p>
-         <p>Tlf: 86 18 09 90 | mail@sharks.dk</p>
+         <p>Tlf: 86 18 09 90 | support@troejborg.dk</p>
       </footer>
      <!--=============== MAIN JS ===============-->
      <script src="js/main.js"></script>
