--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="media/favicon.png" type="image/x-icon">
-    <title>Document</title>
-    <!-- External css sheets -->
-     <!--=============== Font awesome/REMIXICONS ===============-->
-     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Trøjborg Bryggeri - Din kilde til kvalitetsalkoholfri øl og mocktails. Oplev vores spændende smagsoplevelser og sunde alternativer til traditionelle drikkevarer. Brygget med passion og dedikation for en sund livsstil." >
+   <link rel="icon" href="media/favicon.png" type="image/x-icon">
+   <title>Trøjborg Bryggeri</title>
+   <!-- External css sheets -->
+    <!--=============== Font awesome/REMIXICONS ===============-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- CSS Style sheets -->
+   <!-- local Style sheets -->
 
-    <!-- Navbar css link -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/main.css">
+   <!-- Navbar css link -->
+   <link rel="stylesheet" href="css/navbar.css">
+   <!-- Generelle css regler for hele hjemmesiden. -->
+   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-      <!------------------- Navigations bar ------------------->
+      <!-- Navigations bar -->
       <header class="header">
             <nav class="nav container">
                <div class="nav__data">
-                  <a href="#" class="nav__logo">
+                  <a href="index.html" class="nav__logo">
                      <img src="media/logo.png" alt="Trøjborg logo">
                   </a>
                   
@@ -84,20 +86,20 @@
       
       <h2 class="header__h1">Velkomen til Trøjborg Bryggeri</h2>
 
-      <!---------------------- JS Slider ---------------------->
+      <!-- JS Slider -->
       <section class="wrapper">
          <i id="left" class="fa-solid fa-angle-left"></i>
          <div class="carousel">
-            <img src="media/slider/img-1.jpg" alt="img" draggable="false">
-            <img src="media/slider/img-2.jpg" alt="img" draggable="false">
-            <img src="media/slider/img-3.jpg" alt="img" draggable="false">
-            <img src="media/slider/img-4.jpg" alt="img" draggable="false">
-            <img src="media/slider/img-5.jpg" alt="img" draggable="false">
+            <img src="media/slider/festival.webp" alt="Vores produkter blev solgt på Smartfest sidste år!" draggable="false">
+            <img src="media/slider/trøjborg-beers.webp" alt="Trøjborg øl, som også bliver solgt på troejborg-bryg" draggable="false">
+            <img src="media/slider/trøjborg-owner.webp" alt="Trøjborg's ejer som her står i vores bryggeri" draggable="false">
+            <img src="media/slider/girls-drinking-beer.webp" alt="Nogle kvinder som nyder vores øl til et privat arramgement i århus." draggable="false">
+            <img src="media/slider/mocktails-cans.webp" alt="Trøjborg mocktails på dåse, som også bliver solgt på troejborg-bryg" draggable="false">
          </div>
          <i id="right" class="fa-solid fa-angle-right"></i>
          </section>
 
-      <!---------------------- Info grafik ---------------------->
+      <!-- Info grafik -->
       <main class="infographic">
          <div class="info__titles">
          <h2 class="header__h2__mobile">Velkomen til Trøjborg Bryggeri</h2>
@@ -110,24 +112,24 @@
 
 
 
-      <!---------------------- Footer ---------------------->
+      <!-- Footer -->
       <footer class="footer">
          <div class="social">
-               <a href="https://www.facebook.com/sharksaarhus/?locale=da_DK" target="”_blank”" >
+               <a href="#" target="”_blank”" >
                   <i class="fab fa-facebook"></i>
                </a>
-               <a href="https://www.instagram.com/sharkspoolhallogdiner/" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fab fa-instagram"></i>
                </a>
-               <a href="https://www.google.com/maps/place/Sharks/@56.1555213,10.2036504,17z/data=!3m1!4b1!4m6!3m5!1s0x464c3f93ddfeacb3:0xd805db22a7d13f2d!8m2!3d56.1555213!4d10.2062253!16s%2Fg%2F11b8072jw7?entry=ttu" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fa-solid fa-location-dot"></i>
                </a>
-               <a href="https://www.findsmiley.dk/48948" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fa-regular fa-face-smile"></i>
                </a>
          </div>
          <p class="copyright">Terms of use | Privacy Policy</p>
-         <p>Tlf: 86 18 09 90 | mail@sharks.dk</p>
+         <p>Tlf: 86 18 09 90 | support@troejborg.dk</p>
       </footer>
      <!--=============== MAIN JS ===============-->
      <script src="js/main.js"></script>
