--- a/mocktails.html
+++ b/mocktails.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="da">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="media/favicon.png" type="image/x-icon">
-    <title>Document</title>
-    <!-- External css sheets -->
-     <!--=============== Font awesome/REMIXICONS ===============-->
-     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Trøjborg Bryggeri - Din kilde til kvalitetsalkoholfri øl og mocktails. Oplev vores spændende smagsoplevelser og sunde alternativer til traditionelle drikkevarer. Brygget med passion og dedikation for en sund livsstil.">
+   <link rel="icon" href="media/favicon.png" type="image/x-icon">
+   <title>Trøjborg Bryggeri</title>
+   <!-- External css sheets -->
+    <!--=============== Font awesome/REMIXICONS ===============-->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 
-    <!-- CSS Style sheets -->
+   <!-- local Style sheets -->
 
-    <!-- Navbar css link -->
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/grid.css">
+   <!-- Navbar css link -->
+   <link rel="stylesheet" href="css/navbar.css">
+   <!-- Generelle css regler for hele hjemmesiden. -->
+   <link rel="stylesheet" href="css/main.css">
+   <!-- Alt grid css er hold til det her sheet -->
+   <link rel="stylesheet" href="css/grid.css">
 </head>
 <body>
-      <!------------------- Navigations bar ------------------->
+      <!-- Navigations bar -->
       <header class="header">
             <nav class="nav container">
                <div class="nav__data">
-                  <a href="#" class="nav__logo">
+                  <a href="index.html" class="nav__logo">
                      <img src="media/logo.png" alt="Trøjborg logo">
                   </a>
                   
@@ -84,13 +87,15 @@
       </header>
       <h1 class="products-header">Vores Alkoholfri Mocktails</h1>
 
+      <!-- mocktail produkter, som så bare er copy paste 6 gange for antal produkter. -->
+
       <section class="product-container">
          <div class="products">
             <div class="product-name">
                <h2>Trøjborg Gin Hass</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/mocktails/gin-hass.png" alt="Et billede af vores ipa øl">
+               <img src="media/shop/mocktails/gin-hass.webp" alt="Et billede af vores ipa øl">
             </div>
             <div class="product-desc">
                <p>Forfrisk dig med vores alkoholfri Gin Hass. Den sprøde smag af citrus 
@@ -107,8 +112,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.webp" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.webp" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -119,7 +124,7 @@
                <h2>Trøjborg Gin Hass Dåse</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/mocktails/gin-hass-can.png" alt="Et billede af vores ipa øl">
+               <img src="media/shop/mocktails/gin-hass-can.webp" alt="Et billede af vores ipa øl">
             </div>
             <div class="product-desc">
                <p>Forfrisk dig med vores alkoholfri Gin Hass. Den sprøde smag af citrus 
@@ -136,8 +141,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.webp" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.webp" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -148,7 +153,7 @@
                <h2>Trøjborg Raspberry</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/mocktails/raspberry.png" alt="Et billede af vores ipa øl">
+               <img src="media/shop/mocktails/raspberry.webp" alt="Et billede af vores ipa øl">
             </div>
             <div class="product-desc">
                <p>Trøjborg Raspberry er en frugtagtig fornøjelse uden alkohol. Den 
@@ -166,8 +171,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.webp" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.webp" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -178,7 +183,7 @@
                <h2>Trøjborg Raspberry Dåse</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/mocktails/raspberry-can.png" alt="Et billede af vores ipa øl">
+               <img src="media/shop/mocktails/raspberry-can.webp" alt="Et billede af vores ipa øl">
             </div>
             <div class="product-desc">
                <p>Trøjborg Raspberry er en frugtagtig fornøjelse uden alkohol. Den 
@@ -196,8 +201,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.webp" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.webp" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -208,7 +213,7 @@
                <h2>Trøjborg Mojito</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/mocktails/mojito.png" alt="Et billede af vores ipa øl">
+               <img src="media/shop/mocktails/mojito.webp" alt="Et billede af vores ipa øl">
             </div>
             <div class="product-desc">
                <p>Vores alkoholfrie Mojito er en fest for smagsløgene. 
@@ -226,8 +231,8 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.webp" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.webp" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
@@ -238,7 +243,7 @@
                <h2>Trøjborg Pilsner Dåse</h2>
             </div>
             <div class="product-img">
-               <img src="media/shop/mocktails/mojito-can.png" alt="Et billede af vores ipa øl">
+               <img src="media/shop/mocktails/mojito-can.webp" alt="Et billede af vores ipa øl">
             </div>
             <div class="product-desc">
                <p>Vores alkoholfrie Mojito er en fest for smagsløgene. 
@@ -256,30 +261,30 @@
                </ul>
             </div>
             <div class="product-buy">
-               <img src="media/shop/addandremove.png" alt="">
-               <img src="media/shop/buybtn.png" alt="">
+               <img src="media/shop/addandremove.webp" alt="trøjborg fjern og tilføj knap">
+               <img src="media/shop/buybtn.webp" alt="trøjborg køb knap">
             </div>
          </div>
       </section>
 
-      <!---------------------- Footer ---------------------->
+      <!-- Footer -->
       <footer class="footer">
          <div class="social">
-               <a href="https://www.facebook.com/sharksaarhus/?locale=da_DK" target="”_blank”" >
+               <a href="#" target="”_blank”" >
                   <i class="fab fa-facebook"></i>
                </a>
-               <a href="https://www.instagram.com/sharkspoolhallogdiner/" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fab fa-instagram"></i>
                </a>
-               <a href="https://www.google.com/maps/place/Sharks/@56.1555213,10.2036504,17z/data=!3m1!4b1!4m6!3m5!1s0x464c3f93ddfeacb3:0xd805db22a7d13f2d!8m2!3d56.1555213!4d10.2062253!16s%2Fg%2F11b8072jw7?entry=ttu" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fa-solid fa-location-dot"></i>
                </a>
-               <a href="https://www.findsmiley.dk/48948" target="”_blank”">
+               <a href="#" target="”_blank”">
                   <i class="fa-regular fa-face-smile"></i>
                </a>
          </div>
          <p class="copyright">Terms of use | Privacy Policy</p>
-         <p>Tlf: 86 18 09 90 | mail@sharks.dk</p>
+         <p>Tlf: 86 18 09 90 | support@troejborg.dk</p>
       </footer>
      <!--=============== MAIN JS ===============-->
      <script src="js/main.js"></script>
